nvim_setting update